# tradebot

./: CMakeLists.txt  main.cpp
CurlManager/: CMakeLists.txt  curlmanager.hpp
CurlManager/src/: curlmanager.cpp
common_include/: common.h
curlmanager/: CMakeLists.txt
curlmanager/include/: curlmanager.hpp
curlmanager/src/: curlmanager.cpp
exchanges/: CMakeLists.txt
exchanges/include/: binance.hpp  bittrex.hpp  coinbase.hpp  exchange.hpp
exchanges/src/: binance.cpp  bittrex.cpp
libarbitrage/: CMakeLists.txt
libarbitrage/include/: arbitrage_pair.hpp
libarbitrage/src/: arbitrage_pair.cpp
libtradebot/: CMakeLists.txt
libtradebot/include/: tradebot.hpp
libtradebot/src/: tradebot.cpp
timer/: CMakeLists.txt
timer/include/: timer.hpp
timer/src/: timer.cpp
